syntax = "proto3";
package person;

message Person {
    string FirstName = 1 [json_name = "first_name"];
    string LastName = 2 [json_name = "last_name"];
    uint32 age = 3;
    uint32 sex = 4;
}

message PersonX {
    string FirstName = 1;
    string LastName = 2;
}
